--- a/Encoder-Decoder/Encoder-Decoder.vcxproj.filters
+++ b/Encoder-Decoder/Encoder-Decoder.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="src\resource\resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\chipers\railfence\railfence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\chipers\morse\morse.c">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\language\language.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\chipers\railfence\railfence.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
